Fix reviews issues
The reviews include fixing overlapping of buttons in result page.
fixing responsiveness of footer in tablets
Putting one h1 tag per page.
Update README with more information.

--- a/css/details.css
+++ b/css/details.css
@@ -357,6 +357,18 @@ iframe {
     width: 100%;
     margin-left: 0.3rem;
   }
+
+  .footer-nav-wrapper::before,
+  .footer-nav-wrapper::after {
+    content: "";
+    position: absolute;
+    left: -90px;
+    top: -15px;
+    width: 100vw;
+    height: 2px;
+    border: 1px solid #98a4a5;
+    background: #eee;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
@@ -386,6 +398,18 @@ iframe {
     list-style-type: none;
     font-size: 1rem;
     width: 100%;
+  }
+
+  .footer-nav-wrapper::before,
+  .footer-nav-wrapper::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: -15px;
+    width: 100vw;
+    height: 2px;
+    border: 1px solid #98a4a5;
+    background: #eee;
   }
 }
 
