--- a/css/style.css
+++ b/css/style.css
@@ -472,7 +472,19 @@ body .form-control:nth-child(1) {
     list-style-type: none;
     font-size: 0.8rem;
     width: 100%;
-    margin-left: 0.3rem;
+    margin-left: 0.2rem;
+  }
+
+  .footer-nav-wrapper::before,
+  .footer-nav-wrapper::after {
+    content: "";
+    position: absolute;
+    left: -90px;
+    top: -15px;
+    width: 100vw;
+    height: 2px;
+    border: 1px solid #98a4a5;
+    background: #eee;
   }
 }
 
@@ -498,6 +510,18 @@ body .form-control:nth-child(1) {
     list-style-type: none;
     font-size: 1rem;
     width: 100%;
+  }
+
+  .footer-nav-wrapper::before,
+  .footer-nav-wrapper::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: -15px;
+    width: 100vw;
+    height: 2px;
+    border: 1px solid #98a4a5;
+    background: #eee;
   }
 }
 
